# EcoPaste

./: .gitignore  DEV-SCRIPTS.md  EcoPaste技术架构分析与AI开发指导.md  README.md  Windows-OCR-Fix-Report.md  build-macos.sh  build-windows.bat  build-windows.ps1  check-env.bat  check-env.sh  check-status.bat  debug-clipboard.py  debug-image-flow.py  demo-device-names.js  dev-manager.bat  package.json  restart-dev.bat  restart-dev.sh  start-dev.bat  start-dev.ps1  start-dev.sh  stop-dev.bat  stop-dev.sh  sync-diagnostic.html  test-final-verification.py  test-fixes.py  test-image-clipboard.py  test-image-detailed.py  test-image-direct.py  test-permission-reality.py  test-pnpm.bat  test-register.html  test-sync-integration.html  test-sync-server.bat  test-sync.html  test-sync.mjs  test-ui-switching.py  同步功能实现总结.md
docs/: auto-device-name-feature.md  device-name-format.md  enhanced-device-name-format.md  register-fix-report.md  sync-development-guide.md
server/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  start.bat
server/data/: ecopaste.db
server/src/: index.js
src/: App.tsx
src-tauri/: Cargo.toml  history.db  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/sync/: Cargo.toml
src-tauri/src/plugins/sync/src/: auth.rs  commands.rs  conflict_resolver.rs  desktop.rs  device.rs  encryption.rs  error.rs  lib.rs  mobile.rs  models.rs  storage.rs  sync_engine.rs  websocket.rs
src/hooks/: useTauriFocus.ts  useTray.ts  useWindowState.ts
(+18 files in other folders)
